Make columns of user and ordergroup lists sortable
This commit implements the sort functionality for the user lists (by name, email, last_activity) and ordergroup lists (by name).
It is a first attempt addressing issue #560.

--- a/app/views/admin/ordergroups/_ordergroups.html.haml
+++ b/app/views/admin/ordergroups/_ordergroups.html.haml
@@ -4,7 +4,7 @@
 %table.table.table-striped
   %thead
     %tr
-      %th= heading_helper Ordergroup, :name
+      %th= sort_link_helper heading_helper(Ordergroup, :name), "name"
       %th= heading_helper Ordergroup, :user_tokens
       %th= heading_helper Ordergroup, :contact_address
       %th= heading_helper Ordergroup, :last_user_activity
