--- a/app/views/foodcoop/ordergroups/_ordergroups.html.haml
+++ b/app/views/foodcoop/ordergroups/_ordergroups.html.haml
@@ -5,7 +5,7 @@
 %table.table.table-striped
   %thead
     %tr
-      %th= heading_helper Ordergroup, :name
+      %th= sort_link_helper heading_helper(Ordergroup, :name), "name"
       %th= heading_helper Ordergroup, :user_tokens
       %th= heading_helper Ordergroup, :break
       %th= heading_helper Ordergroup, :last_user_activity
